[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextcrunch"
version = "1.0.2"
authors = [{ name = "Matthew Kwiatkowski", email = "matt@mkcodes.ca" }]
description = "Access to the ContextCrunch Prompt Compression API from Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.25.1"]


[project.urls]
Homepage = "https://github.com/contextcrunch-ai/contextcrunch-python"
Issues = "https://github.com/contextcrunch-ai/contextcrunch-python/issues"
